# reference-implementations

./: .gitignore  LICENSE  README.md
specifications/: README.md
specifications/sci-for-ai/: README.md
specifications/sci-for-ai/gsf/llm-inference/: CONTRIBUTING.md
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-anthropic.txt  requirements-gemini.txt  requirements-openai.txt  requirements.txt
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/docs/: RECORDING_REAL_DATA.md  SCI_METHODOLOGY.md
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/docs/fixtures/: openai-gpt-4o-mini.json  openai-gpt-4o.json  openai-gpt-5.4.json
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/examples/: compare_example.py
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/scripts/: build_cross_model_table.py
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/src/sci_for_ai/: __init__.py  __main__.py  energy.py  pipeline.py  pricing.py  prompts.py  providers.py  report.py  scale.py  sci.py
specifications/sci-for-ai/gsf/llm-inference/specifications/sci-for-ai/gsf/llm-inference/tests/: test_energy.py  test_pipeline.py  test_pricing_and_scale.py  test_providers.py  test_recorded.py  test_sci.py
tools/: README.md
tools/gsf/agentic-ai-impact-explorer/: LICENSE  README.md  index.html
tools/gsf/green-code-skill/: AGENTS.md  GETTING_STARTED.md  README.md  SKILL.md
tools/gsf/green-code-skill/getting-started/: aider.md  antigravity.md  claude-ai.md  claude-code.md  codex.md  cursor.md  other-tools.md
tools/gsf/green-code-skill/references/: patterns-ai-ml.md  patterns-architecture.md  (+3 more)
